Feature(SYGFAWIUZF-599): Added a new option to the pipeline (dplt_security) to add the users to the new AD group Group-Euctl-nmcommonsec-storage-reader

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -34,6 +34,7 @@ parameters:
   - dplt_developer
   - infra_admin
   - support_contrib
+  - dplt_security
   - remove_user
 - name: branch
   displayName: Ticket Number
@@ -288,6 +289,24 @@ stages:
                 echo "Adding new user to Support Contributor Azure Group"
                 sed -i "/group_azdevops_support_contrib_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
               fi          
+            ;;
+            dplt_security)
+              echo "Check that user is not currently at the group nmcommonsec_storage_reader"
+              mail=`sed -n '/^group_nmcommonsec_storage_reader_members/,/^]/p' terraform.tfvars | grep ${{ parameters.mail }}`
+              if [[ -z "$mail" ]] 
+              then 
+                echo "Adding new user to nmcommonsec_storage_reader Azure AD Group"
+                sed -i "/group_nmcommonsec_storage_reader_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+                echo "User added to nmcommonsec_storage_reader group"
+              fi 
+              echo "Check that user is not currently at the group dplt_developer"
+              mail=`sed -n '/^group_dplt_dev_members/,/^]/p' terraform.tfvars | grep ${{ parameters.mail }}`
+              if [[ -z "$mail" ]] 
+              then 
+                echo "Adding new user to dplt_developer Azure AD Group"
+                sed -i "/group_dplt_dev_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+                echo "User added to dplt_developer group"
+              fi     
             ;;
             remove_user)
               echo "Remove user from all groups"
